<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icn"
            android:visible="false"
            android:title="Home"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/bookings_icn"
            android:visible="true"
            android:title="@string/my_bookings"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_certificates"
            android:icon="@drawable/certificates_icn"
            android:visible="false"
            android:title="@string/certificates"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet_icn"
            android:visible="false"
            android:title="Wallet"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/promo_icn"
            android:visible="true"
            android:title="@string/promo_code"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/invite_icn"
            android:title="@string/invite"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icn"
            android:title="@string/settings"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/phone_icn"
            android:title="@string/contact"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            tools:ignore="HardcodedText" />
    </group>


</menu>