<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_courses"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/feesLH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/fees_lh"
        android:textColor="@android:color/white"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/feesHL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/fees_hl"
        android:textColor="@android:color/white"

        android:textAllCaps="false"/>
    <Button
        android:id="@+id/rateLH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/rate_lh"
        android:textColor="@android:color/white"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/rateHL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/rate_hl"
        android:textColor="@android:color/white"
        android:textAllCaps="false"/>


</LinearLayout>