<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/blur_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/mobileET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="15sp"
                android:inputType="phone"
                android:padding="5dp"
                android:hint="@string/mobile_no"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="15sp"
                android:padding="5dp"
                android:hint="@string/university_school"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="15sp"
                android:padding="5dp"
                android:hint="@string/dep_major"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fields_of_study"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>

        <Spinner
            android:id="@+id/catSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

        </Spinner>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/compRegBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/comp_reg"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

        <Button
            android:visibility="gone"
            android:id="@+id/addCrtBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/add_cer"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/certificatesRV"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


</RelativeLayout>